Add Chonks icon

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -968,6 +968,8 @@
       "redacted_title": "You've unlocked\n Redacted Rainbow",
       "baggy_description": "From the streets to the chain, this little bag holds your portable dose of Rainbow vibes. Taste the colors, and feel the difference.",
       "baggy_title": "You've unlocked\n Rainbow Baggy",
+      "chonks_description": "Imagine the wind in your Rainbow hair, driving down the 101, feeling Chonky.",
+      "chonks_title": "You've unlocked\n The Chonkiest Icon",
       "button": "Snag the icon"
     },
     "explain": {
