--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1602,6 +1602,7 @@
       },
       "markets": {
         "title": "Markets",
+        "view_all": "View All",
         "up_to": "UP TO",
         "already_open": "Already Open"
       },
