markets sort order dropdowns

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1738,6 +1738,11 @@
           }
         }
       },
+      "sort": {
+        "by_volume": "By Volume",
+        "by_change": "By Change",
+        "by_price": "By Price"
+      },
       "leverage": "Leverage",
       "up_to": "Up to"
     },
