Perps market sort order + view all (#6908)
* view all button in markets section

* markets sort order dropdowns

* move sort order config to hook for translation re-renders

* no markets search view

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1607,6 +1607,7 @@
       },
       "markets": {
         "title": "Markets",
+        "view_all": "View All",
         "up_to": "UP TO",
         "already_open": "Already Open"
       },
@@ -1722,7 +1723,8 @@
       "search": {
         "search_markets": "Search markets",
         "markets_count": "%{count} MARKETS",
-        "choose_a_market": "CHOOSE A MARKET"
+        "choose_a_market": "CHOOSE A MARKET",
+        "no_markets_found": "No markets found"
       },
       "close_position": {
         "estimated_loss": "Estimated Loss",
@@ -1755,6 +1757,11 @@
             ]
           }
         }
+      },
+      "sort": {
+        "by_volume": "By Volume",
+        "by_change": "By Change",
+        "by_price": "By Price"
       },
       "leverage": "Leverage",
       "up_to": "Up to"
